--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "passwordless-proxy",
-  "version": "1.0.0",
-  "description": "Proxy",
+  "version": "2.0.0",
+  "description": "Proxy server without credentials",
   "main": "index.js",
   "license": "MIT",
   "author": "Simo Elalj <simo@tonoid.com>",
@@ -10,11 +10,11 @@
     "test": "echo 'No tests'; exit 0;"
   },
   "dependencies": {
-    "proxy-chain": "1.0.4"
+    "proxy-chain": "2.0.7"
   },
   "devDependencies": {
-    "eslint": "8.2.0",
+    "eslint": "8.23.1",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.25.2"
+    "eslint-plugin-import": "2.26.0"
   }
 }
